--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" class="h-full bg-gray-100">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,5 +9,6 @@
   <body class="h-full">
     <div id="app" class="h-full"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://kit.fontawesome.com/31f90a74fc.js" crossorigin="anonymous"></script>
   </body>
 </html>
